--- a/config/dac.yaml
+++ b/config/dac.yaml
@@ -1,14 +1,13 @@
 dataset_params:
-  root_dir: ../datasets/
+  train_dir: datasets/train
+  test_dir: datasets/test
   frame_shape: [256, 256, 3]
   num_sources: 2
   target_delta: 2
-  base_layer: False
-  use_saliency_map: False
   augmentation_params:
     flip_param:
-      horizontal_flip: False
-      time_flip: False
+      horizontal_flip: True
+      time_flip: True
     jitter_param:
       brightness: 0.1
       contrast: 0.1
@@ -26,7 +25,6 @@ model_params:
     max_features: 1024
     scale_factor: 0.25
     num_blocks: 5
-    quantize: True
   generator_params:
     block_expansion: 64
     max_features: 512
@@ -37,13 +35,7 @@ model_params:
       block_expansion: 64
       max_features: 1024
       num_blocks: 5
-      scale_factor: 0.25
-    upsampler_params:
-      upscale: False #Use convolutional network for reconstruction
-      num_blocks: 4
-      std: 0.05
-      scale_factor: 1
-      
+      scale_factor: 0.25      
 
   discriminator_params:
     scales: [1]
@@ -58,10 +50,8 @@ train_params:
   epoch_milestones: []
   lr: 2.0e-4
   lr_discriminator: 2.0e-4
-  batch_size: 24
+  batch_size: 1
   scales: [1, 0.5, 0.25, 0.125]
-  sm_variance: 0.03
-  sm_type: 'pretrained' # 'pretrained'-semantic KP from mediapipe or 'trainable'-unsupervised learned motion KPs
   checkpoint_freq: 10
   step_wise: False
   adversarial_training: True
@@ -77,26 +67,10 @@ train_params:
     equivariance_value: 10
     equivariance_jacobian: 10
 
-reconstruction_params:
-  num_videos: 1000
-  format: ".mp4"
-
-animate_params:
-  num_pairs: 50
-  format: ".mp4"
-  normalization_params:
-    adapt_movement_scale: False
-    use_relative_movement: True
-    use_relative_jacobian: True
-
-visualizer_params:
-  kp_size: 5
-  draw_border: True
-  colormap: "gist_rainbow"
-
 eval_params:
-  ref_codec: 'ai' #[bpg, ai]
-  qp: 5 #BPG_QPS [0-51], #AI_QPS [1-6]
-  metrics: ['lpips', 'msVGG', 'fsim', 'ms_ssim', 'psnr']
-  temporal: False
-  num_frames: 32 #number of frames to animate from a single reference in the test videos
+  ref_codec: 'ai' #[ai] #to-do: reintegrate BPG codec.
+  qp: 5 #AI_QPS [1-6]
+  metrics: ['lpips', 'msVGG', 'fsim', 'ms_ssim', 'psnr', 'vmaf','dists']
+  temporal: False #Metrics are stored as an average over the whole sequences. Set true to store per frame metrics
+  num_frames: 32 #total number of frames to compress from the input video
+  gop_size: 16 #number of frames to animate from a single reference in the test videos
