--- a/config/rdac.yaml
+++ b/config/rdac.yaml
@@ -1,15 +1,10 @@
 dataset_params:
-  train_dir: ../datasets/train
-  test_dir: ../datasets/test
+  train_dir: datasets/train
+  test_dir: datasets/test
   frame_shape: [256, 256, 3]
-  base_layer: False
-  num_sources: 2
+  num_sources: 2 #minimum 3 samples (1 reference, 2 targets) for temporal learning
   target_delta: 2
-  use_saliency_map: False
   augmentation_params:
-    flip_param:
-      horizontal_flip: False
-      time_flip: False
     jitter_param:
       brightness: 0.1
       contrast: 0.1
@@ -35,6 +30,7 @@ model_params:
     num_bottleneck_blocks: 6
     estimate_occlusion_map: True
     residual_features: 12
+    temporal_residual_learning: False #Set to true to learn temporal residuals & set train_params[num_sources] >=3 
     dense_motion_params:
       block_expansion: 64
       max_features: 1024
@@ -44,13 +40,8 @@ model_params:
       scale_factor: 1 #set to fraction to test if compression efficiecy is higher with lower dimension residuals
       num_intermediate_layers: 2 #upsampling/downsampling blocks in the compression VAE
     rec_network_params:
-      gen_rec: False #Use convolutional network for reconstruction
+      gen_rec: True #Use convolutional network for reconstruction
       num_blocks: 4
-    upsampler_params:
-      upscale: False #Use convolutional network for reconstruction
-      num_blocks: 4
-      std: 0.05
-      scale_factor: 1
 
   discriminator_params:
     scales: [1]
@@ -69,11 +60,9 @@ train_params:
   scales: [1, 0.5, 0.25, 0.125]
   rd_lambda: [0.05,0.1,0.2,0.3,0.5,0.7,0.9,1.4]
   target_rate: 2
-  sm_variance: 0.01
-  sm_type: 'pretrained' # 'pretrained'-semantic KP from mediapipe or 'trainable'-unsupervised learned motion KPs
   checkpoint_freq: 10
   step_wise: False
-  adversarial_training: True
+  adversarial_training: False
   transform_params:
     sigma_affine: 0.05
     sigma_tps: 0.005
@@ -86,27 +75,10 @@ train_params:
     equivariance_value: 10
     equivariance_jacobian: 10
 
-reconstruction_params:
-  num_videos: 1000
-  format: ".mp4"
-
-animate_params:
-  num_pairs: 50
-  format: ".mp4"
-  normalization_params:
-    adapt_movement_scale: False
-    use_relative_movement: True
-    use_relative_jacobian: True
-
-visualizer_params:
-  kp_size: 3
-  draw_border: True
-  colormap: "gist_rainbow"
-
 eval_params:
-  ref_codec: 'ai' #[bpg, ai]
-  qp: 5 #BPG_QPS [0-51], #AI_QPS [1-6]
-  metrics: ['lpips','dists', 'msVGG', 'fsim', 'ms_ssim', 'psnr','vmaf']
-  temporal: False
-  num_frames: 32
-
+  ref_codec: 'ai' #[ai] #to-do: reintegrate BPG codec.
+  qp: 5 #AI_QPS [1-6]
+  metrics: ['lpips', 'msVGG', 'fsim', 'ms_ssim', 'psnr', 'vmaf','dists']
+  temporal: False #Metrics are stored as an average over the whole sequences. Set true to store per frame metrics
+  num_frames: 32 #total number of frames to compress from the input video
+  gop_size: 16 #number of frames to animate from a single reference in the test videos
