updated training and inference pipelines for easy reproducibility of coding results, included inference pipelines for conventional coders

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,10 @@
 checkpoints/
 
 datasets/
+results/
+
+conventional_codecs/hevc_hm
+conventional_codecs/vtm
+conventional_codecs/vvenc
+conventional_codecs/vvdec
 
