--- a/config/dac.yaml
+++ b/config/dac.yaml
@@ -74,7 +74,8 @@ visualizer_params:
 
 eval_params:
   ref_codec: 'ai' #BPG codec is now deprecated :: We use Cheng2020 LIC from compressai
-  qp: 3 #QPS [1-6]
+  qp: 4 #QPS [1-6]
+  #evaluation metrics: Other implemented metrics ['psnr-hvs', 'nlpd', 'iw_ssim','vif']
   metrics: ['lpips','dists','msVGG', 'fsim', 'ms_ssim', 'psnr','vmaf']
   temporal: False # Set to store per frame reconstruction quality in the output file
   num_frames: 128 #number of frames to animate from a single reference in the test videos
